--- a/circle-blast/game.html
+++ b/circle-blast/game.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 <!-- External libraries -->
-<!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
-
-<!--  https://github.com/goldfire/howler.js -->
-
+<script src="https://pixijs.download/release/pixi.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
 
 <!-- My JS files -->
+ <script src="js/utilities.js"></script>
+ <script src="js/classes.js"></script>
+ <script src="js/main.js"></script>
 
 </body>
 </html>
