Circle Blast! - Part 4

--- a/circle-blast/game.html
+++ b/circle-blast/game.html
@@ -13,11 +13,13 @@
 <!-- External libraries -->
 <script src="https://pixijs.download/release/pixi.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 
 <!-- My JS files -->
  <script src="js/utilities.js"></script>
  <script src="js/classes.js"></script>
  <script src="js/main.js"></script>
+ <script src="js/loader.js"></script>
 
 </body>
 </html>
